inserção de alguns conteúdos e alterações pequenas na estilização

--- a/index.html
+++ b/index.html
@@ -3,14 +3,177 @@
 <head>
     <meta charset="UTF-8"/>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="/css/style_index.css">
+    <link rel="stylesheet" type="text/css" href="../astroifro/css/style_index.css">
+    <link rel="stylesheet" type="text/css" href="../astroifro/css/style_content.css">
     <script src="https://code.jquery.com/jquery-3.6.4.min.js"></script>
-    <script src="/javascript/events.js"></script>
+    <script src="../astroifro/javascript/events.js"></script>
     <title>Galáxia Híbrida</title>
 </head>
 <body>
     <!-- <div class="back_layout"> -->
-        <div class="stars">           
+        <div class="stars">
+            <span style="--i:4"></span>
+            <span style="--i:3"></span>
+            <span style="--i:2"></span>
+            <span style="--i:10"></span>
+            <span style="--i:1"></span>
+            <span style="--i:13"></span>
+            <span style="--i:6"></span>
+            <span style="--i:5"></span>
+            <span style="--i:12"></span>
+            <span style="--i:15"></span>
+            <span style="--i:8"></span>
+            <span style="--i:7"></span>
+            <span style="--i:14"></span>
+            <span style="--i:11"></span>
+            <span style="--i:10"></span>
+            <span style="--i:1"></span>
+            <span style="--i:9"></span>
+
+            <span style="--i:4"></span>
+            <span style="--i:3"></span>
+            <span style="--i:2"></span>
+            <span style="--i:10"></span>
+            <span style="--i:1"></span>
+            <span style="--i:13"></span>
+            <span style="--i:6"></span>
+            <span style="--i:5"></span>
+            <span style="--i:12"></span>
+            <span style="--i:15"></span>
+            <span style="--i:8"></span>
+            <span style="--i:7"></span>
+            <span style="--i:14"></span>
+            <span style="--i:11"></span>
+            <span style="--i:10"></span>
+            <span style="--i:1"></span>
+            <span style="--i:9"></span>
+
+            <span style="--i:4"></span>
+            <span style="--i:3"></span>
+            <span style="--i:2"></span>
+            <span style="--i:10"></span>
+            <span style="--i:1"></span>
+            <span style="--i:13"></span>
+            <span style="--i:6"></span>
+            <span style="--i:5"></span>
+            <span style="--i:12"></span>
+            <span style="--i:15"></span>
+            <span style="--i:8"></span>
+            <span style="--i:7"></span>
+            <span style="--i:14"></span>
+            <span style="--i:11"></span>
+            <span style="--i:10"></span>
+            <span style="--i:1"></span>
+            <span style="--i:9"></span>
+
+            <span style="--i:4"></span>
+            <span style="--i:3"></span>
+            <span style="--i:2"></span>
+            <span style="--i:10"></span>
+            <span style="--i:1"></span>
+            <span style="--i:13"></span>
+            <span style="--i:6"></span>
+            <span style="--i:5"></span>
+            <span style="--i:12"></span>
+            <span style="--i:15"></span>
+            <span style="--i:8"></span>
+            <span style="--i:7"></span>
+            <span style="--i:14"></span>
+            <span style="--i:11"></span>
+            <span style="--i:10"></span>
+            <span style="--i:1"></span>
+            <span style="--i:9"></span>
+
+            <span style="--i:4"></span>
+            <span style="--i:3"></span>
+            <span style="--i:2"></span>
+            <span style="--i:10"></span>
+            <span style="--i:1"></span>
+            <span style="--i:13"></span>
+            <span style="--i:6"></span>
+            <span style="--i:5"></span>
+            <span style="--i:12"></span>
+            <span style="--i:15"></span>
+            <span style="--i:8"></span>
+            <span style="--i:7"></span>
+            <span style="--i:14"></span>
+            <span style="--i:11"></span>
+            <span style="--i:10"></span>
+            <span style="--i:1"></span>
+            <span style="--i:9"></span>
+
+            <span style="--i:4"></span>
+            <span style="--i:3"></span>
+            <span style="--i:2"></span>
+            <span style="--i:10"></span>
+            <span style="--i:1"></span>
+            <span style="--i:13"></span>
+            <span style="--i:6"></span>
+            <span style="--i:5"></span>
+            <span style="--i:12"></span>
+            <span style="--i:15"></span>
+            <span style="--i:8"></span>
+            <span style="--i:7"></span>
+            <span style="--i:14"></span>
+            <span style="--i:11"></span>
+            <span style="--i:10"></span>
+            <span style="--i:1"></span>
+            <span style="--i:9"></span>
+
+            <span style="--i:4"></span>
+            <span style="--i:3"></span>
+            <span style="--i:2"></span>
+            <span style="--i:10"></span>
+            <span style="--i:1"></span>
+            <span style="--i:13"></span>
+            <span style="--i:6"></span>
+            <span style="--i:5"></span>
+            <span style="--i:12"></span>
+            <span style="--i:15"></span>
+            <span style="--i:8"></span>
+            <span style="--i:7"></span>
+            <span style="--i:14"></span>
+            <span style="--i:11"></span>
+            <span style="--i:10"></span>
+            <span style="--i:1"></span>
+            <span style="--i:9"></span>
+
+            <span style="--i:4"></span>
+            <span style="--i:3"></span>
+            <span style="--i:2"></span>
+            <span style="--i:10"></span>
+            <span style="--i:1"></span>
+            <span style="--i:13"></span>
+            <span style="--i:6"></span>
+            <span style="--i:5"></span>
+            <span style="--i:12"></span>
+            <span style="--i:15"></span>
+            <span style="--i:8"></span>
+            <span style="--i:7"></span>
+            <span style="--i:14"></span>
+            <span style="--i:11"></span>
+            <span style="--i:10"></span>
+            <span style="--i:1"></span>
+            <span style="--i:9"></span>
+
+            <span style="--i:4"></span>
+            <span style="--i:3"></span>
+            <span style="--i:2"></span>
+            <span style="--i:10"></span>
+            <span style="--i:1"></span>
+            <span style="--i:13"></span>
+            <span style="--i:6"></span>
+            <span style="--i:5"></span>
+            <span style="--i:12"></span>
+            <span style="--i:15"></span>
+            <span style="--i:8"></span>
+            <span style="--i:7"></span>
+            <span style="--i:14"></span>
+            <span style="--i:11"></span>
+            <span style="--i:10"></span>
+            <span style="--i:1"></span>
+            <span style="--i:9"></span>
+
             <span style="--i:4"></span>
             <span style="--i:3"></span>
             <span style="--i:2"></span>
@@ -127,14 +290,9 @@
 
     <div class="container">
         <div class= "navbar">
-            <a href="#nav_comeceaqui" class="nav" id="nav_comeceaqui">Comece por aqui :)</a>
-
+            <a href="" class="nav" id="nav_comeceaqui">Comece por aqui :)</a>
             <a href=""  class="nav" id="nav_blog">Blog</a>
-
             <a href=""  class="nav" id="nav_materiais">Materiais</a>
-
-            <a href=""  class="nav" id="nav_eventos">Eventos</a>
-
             <a href=""  class="nav" id="nav_sobre">Sobre Nós</a>
         </div>
         
@@ -166,7 +324,46 @@
         </div>
 
         <div class="content" id="content_blog">
-            <p>Lorem Ipsum é simplesmente uma simulação de texto da indústria tipográfica e de impressos, e vem sendo utilizado desde o século XVI, quando um impressor desconhecido pegou uma bandeja de tipos e os embaralhou para fazer um livro de modelos de tipos. Lorem Ipsum sobreviveu não só a cinco séculos, como também ao salto para a editoração eletrônica, permanecendo essencialmente inalterado. Se popularizou na década de 60, quando a Letraset lançou decalques contendo passagens de Lorem Ipsum, e mais recentemente quando passou a ser integrado a softwares de editoração eletrônica como Aldus PageMaker.</p>
+           
+            <div class="box_post" id="box_post_1">
+                <div class="img_box_post"><img src="" alt=""></div>
+                <div class="box_post_content">
+                    <a class="title_post"><h4>Buracos Negros - uma breve introdução<h4></a>
+                    <p class="post_description">description</p>
+                </div>
+           </div>
+
+           <div class="box_post" id="box_post_2">
+                <div class="img_box_post"><img src="" alt=""></div>
+                <div class="box_post_content">
+                    <a class="title_post"><h4>O esquema de Huble</h4></a>
+                    <p class="post_description">description</p>
+                </div>
+           </div>
+
+           <div class="box_post" id="box_post_3">
+                <div class="img_box_post"><img src="" alt=""></div>
+                <div class="box_post_content">
+                    <a class="title_post"><h4>title</h4></a>
+                    <p class="post_description">description</p>
+                </div>
+           </div>
+
+           <div class="box_post" id="box_post_4">
+                <div class="img_box_post"><img src="" alt=""></div>
+                <div class="box_post_content">
+                    <a class="title_post"><h4>title</h4></a>
+                    <p class="post_description">description</p>
+                </div>
+           </div>
+
+           <div class="box_post" id="box_post_5">
+                <div class="img_box_post"><img src="" alt=""></div>
+                <div class="box_post_content">
+                    <a class="title_post"><h4>title</h4></a>
+                    <p class="post_description">description</p>
+                </div>
+           </div>
         </div>
     </div>
 </body>
