Script para carregar as estrelas e logo adicionados

--- a/index.html
+++ b/index.html
@@ -3,10 +3,10 @@
 <head>
     <meta charset="UTF-8"/>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" type="text/css" href="../astroifro/css/style_index.css">
-    <link rel="stylesheet" type="text/css" href="../astroifro/css/style_content.css">
+    <link rel="stylesheet" type="text/css" href="css/style_index.css">
+    <link rel="stylesheet" type="text/css" href="css/style_content.css">
     <script src="https://code.jquery.com/jquery-3.6.4.min.js"></script>
-    <script src="../astroifro/javascript/events.js"></script>
+    <script src="javascript/events.js"></script>
     <title>Galáxia Híbrida</title>
 </head>
 <body>
@@ -285,7 +285,7 @@
     <!-- </div> -->
 
     <div class="header_layout">
-        <div id="teste"></div>
+        <!-- <img id="logo"> -->
     </div>
 
     <div class="container">
