Mudança da logo e nova tabela

--- a/index.html
+++ b/index.html
@@ -11,282 +11,21 @@
 </head>
 <body>
     <!-- <div class="back_layout"> -->
-        <div class="stars">
-            <span style="--i:4"></span>
-            <span style="--i:3"></span>
-            <span style="--i:2"></span>
-            <span style="--i:10"></span>
-            <span style="--i:1"></span>
-            <span style="--i:13"></span>
-            <span style="--i:6"></span>
-            <span style="--i:5"></span>
-            <span style="--i:12"></span>
-            <span style="--i:15"></span>
-            <span style="--i:8"></span>
-            <span style="--i:7"></span>
-            <span style="--i:14"></span>
-            <span style="--i:11"></span>
-            <span style="--i:10"></span>
-            <span style="--i:1"></span>
-            <span style="--i:9"></span>
-
-            <span style="--i:4"></span>
-            <span style="--i:3"></span>
-            <span style="--i:2"></span>
-            <span style="--i:10"></span>
-            <span style="--i:1"></span>
-            <span style="--i:13"></span>
-            <span style="--i:6"></span>
-            <span style="--i:5"></span>
-            <span style="--i:12"></span>
-            <span style="--i:15"></span>
-            <span style="--i:8"></span>
-            <span style="--i:7"></span>
-            <span style="--i:14"></span>
-            <span style="--i:11"></span>
-            <span style="--i:10"></span>
-            <span style="--i:1"></span>
-            <span style="--i:9"></span>
-
-            <span style="--i:4"></span>
-            <span style="--i:3"></span>
-            <span style="--i:2"></span>
-            <span style="--i:10"></span>
-            <span style="--i:1"></span>
-            <span style="--i:13"></span>
-            <span style="--i:6"></span>
-            <span style="--i:5"></span>
-            <span style="--i:12"></span>
-            <span style="--i:15"></span>
-            <span style="--i:8"></span>
-            <span style="--i:7"></span>
-            <span style="--i:14"></span>
-            <span style="--i:11"></span>
-            <span style="--i:10"></span>
-            <span style="--i:1"></span>
-            <span style="--i:9"></span>
-
-            <span style="--i:4"></span>
-            <span style="--i:3"></span>
-            <span style="--i:2"></span>
-            <span style="--i:10"></span>
-            <span style="--i:1"></span>
-            <span style="--i:13"></span>
-            <span style="--i:6"></span>
-            <span style="--i:5"></span>
-            <span style="--i:12"></span>
-            <span style="--i:15"></span>
-            <span style="--i:8"></span>
-            <span style="--i:7"></span>
-            <span style="--i:14"></span>
-            <span style="--i:11"></span>
-            <span style="--i:10"></span>
-            <span style="--i:1"></span>
-            <span style="--i:9"></span>
-
-            <span style="--i:4"></span>
-            <span style="--i:3"></span>
-            <span style="--i:2"></span>
-            <span style="--i:10"></span>
-            <span style="--i:1"></span>
-            <span style="--i:13"></span>
-            <span style="--i:6"></span>
-            <span style="--i:5"></span>
-            <span style="--i:12"></span>
-            <span style="--i:15"></span>
-            <span style="--i:8"></span>
-            <span style="--i:7"></span>
-            <span style="--i:14"></span>
-            <span style="--i:11"></span>
-            <span style="--i:10"></span>
-            <span style="--i:1"></span>
-            <span style="--i:9"></span>
-
-            <span style="--i:4"></span>
-            <span style="--i:3"></span>
-            <span style="--i:2"></span>
-            <span style="--i:10"></span>
-            <span style="--i:1"></span>
-            <span style="--i:13"></span>
-            <span style="--i:6"></span>
-            <span style="--i:5"></span>
-            <span style="--i:12"></span>
-            <span style="--i:15"></span>
-            <span style="--i:8"></span>
-            <span style="--i:7"></span>
-            <span style="--i:14"></span>
-            <span style="--i:11"></span>
-            <span style="--i:10"></span>
-            <span style="--i:1"></span>
-            <span style="--i:9"></span>
-
-            <span style="--i:4"></span>
-            <span style="--i:3"></span>
-            <span style="--i:2"></span>
-            <span style="--i:10"></span>
-            <span style="--i:1"></span>
-            <span style="--i:13"></span>
-            <span style="--i:6"></span>
-            <span style="--i:5"></span>
-            <span style="--i:12"></span>
-            <span style="--i:15"></span>
-            <span style="--i:8"></span>
-            <span style="--i:7"></span>
-            <span style="--i:14"></span>
-            <span style="--i:11"></span>
-            <span style="--i:10"></span>
-            <span style="--i:1"></span>
-            <span style="--i:9"></span>
-
-            <span style="--i:4"></span>
-            <span style="--i:3"></span>
-            <span style="--i:2"></span>
-            <span style="--i:10"></span>
-            <span style="--i:1"></span>
-            <span style="--i:13"></span>
-            <span style="--i:6"></span>
-            <span style="--i:5"></span>
-            <span style="--i:12"></span>
-            <span style="--i:15"></span>
-            <span style="--i:8"></span>
-            <span style="--i:7"></span>
-            <span style="--i:14"></span>
-            <span style="--i:11"></span>
-            <span style="--i:10"></span>
-            <span style="--i:1"></span>
-            <span style="--i:9"></span>
-
-            <span style="--i:4"></span>
-            <span style="--i:3"></span>
-            <span style="--i:2"></span>
-            <span style="--i:10"></span>
-            <span style="--i:1"></span>
-            <span style="--i:13"></span>
-            <span style="--i:6"></span>
-            <span style="--i:5"></span>
-            <span style="--i:12"></span>
-            <span style="--i:15"></span>
-            <span style="--i:8"></span>
-            <span style="--i:7"></span>
-            <span style="--i:14"></span>
-            <span style="--i:11"></span>
-            <span style="--i:10"></span>
-            <span style="--i:1"></span>
-            <span style="--i:9"></span>
-
-            <span style="--i:4"></span>
-            <span style="--i:3"></span>
-            <span style="--i:2"></span>
-            <span style="--i:10"></span>
-            <span style="--i:1"></span>
-            <span style="--i:13"></span>
-            <span style="--i:6"></span>
-            <span style="--i:5"></span>
-            <span style="--i:12"></span>
-            <span style="--i:15"></span>
-            <span style="--i:8"></span>
-            <span style="--i:7"></span>
-            <span style="--i:14"></span>
-            <span style="--i:11"></span>
-            <span style="--i:10"></span>
-            <span style="--i:1"></span>
-            <span style="--i:9"></span>
-
-            <span style="--i:4"></span>
-            <span style="--i:3"></span>
-            <span style="--i:2"></span>
-            <span style="--i:10"></span>
-            <span style="--i:1"></span>
-            <span style="--i:13"></span>
-            <span style="--i:6"></span>
-            <span style="--i:5"></span>
-            <span style="--i:12"></span>
-            <span style="--i:15"></span>
-            <span style="--i:8"></span>
-            <span style="--i:7"></span>
-            <span style="--i:14"></span>
-            <span style="--i:11"></span>
-            <span style="--i:10"></span>
-            <span style="--i:1"></span>
-            <span style="--i:9"></span>
-
-            <span style="--i:4"></span>
-            <span style="--i:3"></span>
-            <span style="--i:2"></span>
-            <span style="--i:10"></span>
-            <span style="--i:1"></span>
-            <span style="--i:13"></span>
-            <span style="--i:6"></span>
-            <span style="--i:5"></span>
-            <span style="--i:12"></span>
-            <span style="--i:15"></span>
-            <span style="--i:8"></span>
-            <span style="--i:7"></span>
-            <span style="--i:14"></span>
-            <span style="--i:11"></span>
-            <span style="--i:10"></span>
-            <span style="--i:1"></span>
-            <span style="--i:9"></span>
-
-            <span style="--i:4"></span>
-            <span style="--i:3"></span>
-            <span style="--i:2"></span>
-            <span style="--i:10"></span>
-            <span style="--i:1"></span>
-            <span style="--i:13"></span>
-            <span style="--i:6"></span>
-            <span style="--i:5"></span>
-            <span style="--i:12"></span>
-            <span style="--i:15"></span>
-            <span style="--i:8"></span>
-            <span style="--i:7"></span>
-            <span style="--i:14"></span>
-            <span style="--i:11"></span>
-            <span style="--i:10"></span>
-            <span style="--i:1"></span>
-            <span style="--i:9"></span>
-
-            <span style="--i:4"></span>
-            <span style="--i:3"></span>
-            <span style="--i:2"></span>
-            <span style="--i:10"></span>
-            <span style="--i:1"></span>
-            <span style="--i:13"></span>
-            <span style="--i:6"></span>
-            <span style="--i:5"></span>
-            <span style="--i:12"></span>
-            <span style="--i:15"></span>
-            <span style="--i:8"></span>
-            <span style="--i:7"></span>
-            <span style="--i:14"></span>
-            <span style="--i:11"></span>
-            <span style="--i:10"></span>
-            <span style="--i:1"></span>
-            <span style="--i:9"></span>
-
-            <span style="--i:4"></span>
-            <span style="--i:3"></span>
-            <span style="--i:2"></span>
-            <span style="--i:10"></span>
-            <span style="--i:1"></span>
-            <span style="--i:13"></span>
-            <span style="--i:6"></span>
-            <span style="--i:5"></span>
-            <span style="--i:12"></span>
-            <span style="--i:15"></span>
-            <span style="--i:8"></span>
-            <span style="--i:7"></span>
-            <span style="--i:14"></span>
-            <span style="--i:11"></span>
-            <span style="--i:10"></span>
-            <span style="--i:1"></span>
-            <span style="--i:9"></span>
-        </div>
+        <div class="stars"></div>
     <!-- </div> -->
 
     <div class="header_layout">
         <!-- <img id="logo"> -->
     </div>
+    <div class="header_info">
+        <div id="info">
+            <h1>Galaxia Hibrida</h1>
+            <h2>Descubra o universo com a Galáxia Híbrida:<br> Um fórum para entusiastas da astronomia</h2>
+        </div>
+        <img id="logo" src="img/Galaxia_Hibrida_Logo2.png">
+    </div>
+
+    <div class="header_social"></div>
 
     <div class="container">
         <div class= "navbar">
@@ -364,6 +103,36 @@
                     <p class="post_description">description</p>
                 </div>
            </div>
+        </div>
+
+        <div class="content" id="content_sobre">
+            <div class = "tabela">
+                <table>
+                    <tr>
+                        <th>Contate-nos</th>
+                    </tr>
+                    <tr>
+                        <td>Nome:</td>
+                        <td>
+                            <input type="text" id="nome">
+                        <td>
+                    </tr>
+                    <tr>
+                        <td>Email:</td>
+                        <td>
+                            <input type="email" id="email" autocomplete="email">
+                        <td>
+                    </tr>
+                    <tr>
+                        <td>Mensagem:</td>
+                        <td>
+                            <input type="text" id="mensagem" value="(opicional)">
+                        <td>
+                    </tr>
+                </table>
+                <button id="btn_enviar">Enviar</button>
+                <p id="mensagemSucesso">Mensagem enviada com sucesso! Em breve entraremos em contato.</p>
+            </div>
         </div>
     </div>
 </body>
