adicionando evento de clique nas boxes do blog

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 
     <div class="stars"></div>
 
-    <div class="header_layout"><img src="../astroifro/img/layoutindexastroifro.png" alt=""></div>
+    <div class="header_layout"><img src="img/layoutindexastroifro.png" alt=""></div>
 
     <div class="header_info">
         <div id="info">
@@ -342,7 +342,7 @@
                     <tr>
                         <td>Mensagem:</td>
                         <td>
-                            <input type="text" id="mensagem" value="(opicional)">
+                            <input type="text" id="mensagem">
                         <td>
                     </tr>
                 </table>
