preenchendo alts das tags img que estavam vazios

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 
 <div class="stars"></div>
 
-<div class="header_layout"><img src="../astroifro/img/layoutindexastroifro.png" alt=""></div>
+<div class="header_layout"><img src="../astroifro/img/layoutindexastroifro.png" alt="layout-index-astroifro"></div>
 
 <div class="header_info">
     <div id="info">
@@ -82,7 +82,7 @@
         </div>
 
         <div class="box_post" id="box_post_2">
-            <div class="img_box_post"><img src="../astroifro/img/esquemahuble.png" alt=""></div>
+            <div class="img_box_post"><img src="../astroifro/img/esquemahuble.png" alt="esquema-huble"></div>
             <div class="box_post_content">
                 <a href="" class="title_post"><h4>O Telescópio Espacial Huble</h4></a>
                 <p class="post_description">O Telescópio Espacial Hubble é uma maravilha da engenharia e da exploração
@@ -95,7 +95,7 @@
         </div>
 
         <div class="box_post" id="box_post_3">
-            <div class="img_box_post"><img src="../astroifro/img/abuscaporvidaextraterrestre.jpg" alt=""></div>
+            <div class="img_box_post"><img src="../astroifro/img/abuscaporvidaextraterrestre.jpg" alt="busca-por-vida-extraterrestre"></div>
             <div class="box_post_content">
                 <a href="" class="title_post"><h4>A busca por vida extraterrestre
                 </h4></a>
@@ -104,7 +104,7 @@
         </div>
 
         <div class="box_post" id="box_post_4">
-            <div class="img_box_post"><img src="../astroifro/img/exoplanetas.jpg" alt=""></div>
+            <div class="img_box_post"><img src="../astroifro/img/exoplanetas.jpg" alt="exoplanetas"></div>
             <div class="box_post_content">
                 <a href="" class="title_post"><h4>A descoberta de exoplanetas</h4></a>
                 <p class="post_description">Volte aqui mais tarde :)</p>
@@ -112,7 +112,7 @@
         </div>
 
         <div class="box_post" id="box_post_5">
-            <div class="img_box_post"><img src="../astroifro/img/criacaodeestrelas.gif" alt=""></div>
+            <div class="img_box_post"><img src="../astroifro/img/criacaodeestrelas.gif" alt="criacao-de-estrelas"></div>
             <div class="box_post_content">
                 <a href="" class="title_post"><h4>A formação das estrelas</h4></a>
                 <p class="post_description">Volte aqui mais tarde :)</p>
@@ -123,7 +123,7 @@
     <div class="content" id="content_materiais">
         <div class="box" id="box_web">
             <div class="img">
-                <img src="img/icone-web.png" alt="">
+                <img src="img/icone-web.png" alt="icone-web">
             </div>
 
             <div class="nome_dica">
@@ -141,7 +141,7 @@
 
         <div class="box" id="box_insta">
             <div class="img">
-                <img src="img/icone-instagram.png" alt="">
+                <img src="img/icone-instagram.png" alt="icone-instagram">
             </div>
 
             <div class="nome_dica">
@@ -159,7 +159,7 @@
 
         <div class="box" id="box_book">
             <div class="img">
-                <img src="img/icone-books.png" alt="">
+                <img src="img/icone-books.png" alt="icone-books">
             </div>
 
             <div class="nome_dica">
@@ -207,7 +207,7 @@
 
         <div class="box" id="box_yt">
             <div class="img">
-                <img src="img/icone-youtube.png" alt="">
+                <img src="img/icone-youtube.png" alt="icone-youtube">
             </div>
 
             <div class="nome_dica">
@@ -275,7 +275,7 @@
                 <div class="flipper" id="flipper_01">
                     <div class="front" id="">
                         <div class="photo_profile">
-                            <img src="../astroifro/img/gabriel.jpg" alt="">
+                            <img src="../astroifro/img/gabriel.jpg" alt="foto-gabriel">
                         </div>
 
                         <h3 class="name_profile">Gabriel Barros Guimarães</h3>
@@ -300,7 +300,7 @@
                 <div class="flipper" id="flipper_02">
                     <div class="front">
                         <div class="photo_profile">
-                            <img src="../astroifro/img/hayrine.jpg" alt="">
+                            <img src="../astroifro/img/hayrine.jpg" alt="foto-hayrine">
                         </div>
 
                         <h3 class="name_profile">Hayrine Queiroz de Lima</h3>
@@ -326,7 +326,7 @@
                 <div class="flipper" id="flipper_03">
                     <div class="front">
                         <div class="photo_profile">
-                            <img src="../astroifro/img/ian.jpg" alt="">
+                            <img src="../astroifro/img/ian.jpg" alt="foto-ian">
                         </div>
 
                         <h3 class="name_profile">Ian Victor Barbosa de Andrade</h3>
