--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 <div class="header_info">
     <div id="info">
         <!-- <h1>Galaxia Hibrida</h1>
-        <h2>Descubra o universo com a Galáxia Híbrida:<br> Um fórum para entusiastas da astronomia</h2> -->
+        <h2>Descubra o universo com a Galáxia Híbrida: <br> Um fórum para entusiastas da astronomia</h2> -->
     </div>
     <img id="logo" src="img/logo.png" alt="logo">
 </div>
@@ -214,14 +214,14 @@
                 <h2>Youtube</h2>
             </div>
             <div class="list">
-                <!-- Vídeos de gatinhos são muuuitoo fofinhos e legais, mas que tal usar o Youtube para aprender um pouco de astronomia? -->
+                <!-- Vídeos de gatinhos são muito fofinhos e legais, mas que tal usar o YouTube para aprender um pouco de astronomia? -->
                 <ul>
                     <li>
                         <span>Café e Ciência </span>
                         por Felipe Hime: O Café e Ciência mesmo surgiu em
                         2015, e desde então soma 155 mil inscritos e 5
                         milhões de visualizações. Felipe conta que tem o
-                        desejo decompartilhar o seu conhecimento de forma
+                        desejo de compartilhar o seu conhecimento de forma
                         simples e bem compreensiva, de modo que as pessoas
                         possam se interessar mais pela astronomia, aprendendo
                         de um jeito fácil.
@@ -313,7 +313,7 @@
                         <div class="contact_profile"></div>
                     </div>
                     <div class="back" id="back_hay">
-                        <p>A pessoa que tem um pé na tecnologia, outro na academia e a cabeça lá nas estrelas! desbravo
+                        <p>A pessoa que tem um pé na tecnologia, outro na academia e a cabeça lá nas estrelas! Desbravo
                             sistemas enquanto me exercito - afinal, o cosmos é vasto e meus interesses também! Devoro
                             livros de ficção, biologia e nutrição, porque até astronautas precisam de boa alimentação no
                             espaço, certo? Me encanto tanto com o universo quanto com a mente humana. Juntos, vamos
